k8s/Service.yaml
apiVersion: v1 
kind: Service 
metadata:
  name: "demo" 
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: "demo"
