k8s/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: "demo"
    aadpodidbinding: "sace-dev-kv-reader"
  name: demo
  namespace: default
spec:
  template:
    metadata:
      labels:
        app: demo
        aadpodidbinding: sace-dev-kv-reader
    spec:
      containers:
      - name: demo
        image: "sacedevacr.azurecr.io/test/demo:latest"
        imagePullPolicy: Always
        resources:
          requests:
            memory: "200Mi"
            cpu: "100m"
          limits:
            memory: "800Mi"
            cpu: "750m"
        securityContext:
          capabilities:
            drop:
            - all
        ports:
          - containerPort: 6010
            protocol: TCP
        args:
          - "--subscriptionid=f921dcc4-9d2c-4b73-a12e-8c3ca091af03"
          - "--clientid=8388853b-4e49-4421-ad71-2b6684e66580"
          - "--resourcegroup=MC_sace-dev-rg_sacedev_westus2"
          - "--aad-resourcename=https://vault.azure.net"
      imagePullSecrets:
        - name: acr-auth
---
apiVersion: v1
kind: Service
metadata:
  name: "demo"
  namespace: default
spec:
  ports:
  - protocol: TCP
    port: 443
    targetPort: 6010
    name: "demo-https"
  selector:
    app: "demo"
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: "demo"
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
  - hosts:
    - "demo-dev.sace.works"
    secretName: "sslcert-sace-works"
  rules:
  - host: "demo-dev.sace.works"
    http:
      paths:
      - path: "/"
        backend:
          serviceName: "demo"
          servicePort: 443
